--- a/info-front/package.json
+++ b/info-front/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "proxy": "http://api.infojobs.net/api/9/",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.13.3",
     "@tanstack/react-query": "^4.29.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
