--- a/info-front/package.json
+++ b/info-front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://api.infojobs.net/api/9/",
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
